# ukiyo

./: .gitignore  app.py  package-lock.json  pyproject.toml
backend/api/src/api/gemini_api/: __init__.py  gemini.py
backend/ukiyo_service/src/ukiyo_service/: __init__ .py
backend/ukiyo_service/src/ukiyo_service/application/: main.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/home/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/ai-elements/: terminal.tsx
frontend/components/ui/: chatbot.tsx  meteors.tsx  typing_text.tsx
